# aioworkers-aiohttp

./: .gitignore  .scaraplate.conf  .travis.yml  MANIFEST.in  Pipfile  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yml  tests.yml  upload.yml
aioworkers_aiohttp/: __init__.py  abc.py  app.py  plugin.ini  router.py  server.py  storage.py  supervisor.py
example/: README.md  access_log_class.py  config.yaml  handlers.py
tests/: conftest.py  test_app.py  test_app_router.py  test_native.py  test_plugin.py  test_routes.py  test_static.py  test_storage.py  test_supervisor.py
