[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aioworkers-aiohttp"
dynamic = ["version"]
description = "Integrations aioworkers with aiohttp"
readme = "README.rst"
license = "Apache-2.0"
requires-python = ">=3.7"
authors = [
    { name = "Alexander Malev", email = "yttrium@somedev.ru" },
]
keywords = [
    "aiohttp",
    "aioworkers",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "aiohttp-apiset>=0.9.15",
    "aiohttp>=3.8",
    "aioworkers>0.20",
]
[project.optional-dependencies]
dev-test = [
    "aioworkers==0.21.1",
    "aiohttp-apiset==0.9.16",
    "coverage[toml]==7.2.7",
    "pytest==7.4.0",
    "pytest-aioworkers[aiohttp]==0.4",
    "pytest-mock==3.11.1",
    "pyyaml==6.0",
]
dev-lint = [
    "ruff==0.0.277",
    "isort==5.12.0",
    "black==23.7.0",
    "mypy==1.4.1",
]

[project.entry-points.aioworkers]
aiohttp = "aioworkers_aiohttp:plugin"

[project.urls]
Homepage = "https://github.com/aioworkers/aioworkers-aiohttp"
Documentation = "https://github.com/aioworkers/aioworkers-aiohttp#readme"
Issues = "https://github.com/aioworkers/aioworkers-aiohttp/issues"
Source = "https://github.com/aioworkers/aioworkers-aiohttp"

[tool.hatch.version]
path = "aioworkers_aiohttp/__init__.py"

[tool.hatch.build]
include = [
    "/aioworkers_aiohttp",
]

[tool.hatch.envs.default]
features = [
    "dev-test",
]
[tool.hatch.envs.default.scripts]
cov = [
    "coverage run -m pytest",
    "coverage report",
]

[[tool.hatch.envs.all.matrix]]
python = [
    "3.7",
    "3.8",
    "3.9",
    "3.10",
    "3.11",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "aioworkers_aiohttp",
    "tests",
]
addopts = [
    "--doctest-modules",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
branch = false
parallel = false
source = [
    "aioworkers_aiohttp",
    "tests",
]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = [
    "py37",
    "py38",
    "py39",
    "py310",
    "py311",
]

[tool.isort]
profile = "black"
multi_line_output = 3
lines_after_imports = 2
force_single_line = false
include_trailing_comma = true
known_first_party = [
    "aioworkers_aiohttp",
]
known_third_party = [
    "aioworkers",
    "aiohttp",
]

[tool.mypy]
follow_imports = "silent"
strict_optional = true
warn_redundant_casts = true
ignore_missing_imports = true
check_untyped_defs = true

[tool.ruff]
line-length = 120

[tool.hatch.envs.lint]
python = "3.8"
features = [
    "dev-lint",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:aioworkers_aiohttp tests}"
style = [
    "ruff {args:aioworkers_aiohttp tests}",
    "isort --check-only --diff {args:aioworkers_aiohttp tests}",
    "black --check --diff {args:aioworkers_aiohttp tests}",
]
fmt = [
    "ruff --fix {args:aioworkers_aiohttp tests}",
    "isort {args:aioworkers_aiohttp tests}",
    "black {args:aioworkers_aiohttp tests}",
    "style",
]
all = [
    "style",
    "typing",
]

[tool.hatch.envs.template]
detached = true
dependencies = [
    "scaraplate",
]
[tool.hatch.envs.template.scripts]
update = [
    "scaraplate rollup --no-input {args:../cookiecutter-aioworkers-plugin} ."
]
clone = [
    "git clone https://github.com/aioworkers/cookiecutter-aioworkers-plugin {args:../cookiecutter-aioworkers-plugin}"
]
